--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ asgiref==3.3.1
 beautifulsoup4
 Django==3.1.5
 django-countries==7.0
-numpy
-plotly==4.14.3
+#plotly==4.14.3
+#pandas==1.2.2
 psycopg2==2.8.6
 requests==2.25.1
