--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,5 @@ django-countries==7.0
 #pandas==1.2.2
 psycopg2==2.8.6
 requests==2.25.1
-gunicorn[gevent]~=19.9.0
+gevent==20.12.1
+gunicorn[gevent]==20.0.4
