--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,7 @@ django-countries==7.2.1
 #pandas==1.2.2
 psycopg2==2.8.6
 requests==2.25.1
-gunicorn[gevent]==20.0.4
-gevent==1.4.0
+gunicorn[gevent]~=19.9.0
 WeasyPrint==52.5
 django-markdownify==0.9.0
 django-crispy-forms==1.12.0
