--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 beautifulsoup4
-Django>3.2,<4
+Django>3.2,<3.3
 django-countries==7.2.1
 #plotly==4.14.3
 #pandas==1.2.2
-psycopg2==2.8.6
+psycopg2==2.8.5
 requests==2.25.1
 gunicorn[gevent]==20.0.4
+#gunicorn[gevent]~=19.9.0
+#uwsgi==2.0.19.1
 WeasyPrint==52.5
 django-markdownify==0.9.0
 django-crispy-forms==1.12.0
