--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,5 @@ gunicorn[gevent]==20.0.4
 WeasyPrint==52.5
 django-markdownify==0.9.0
 django-crispy-forms==1.12.0
-squarify==0.4.3
 matplotlib==3.4.3
+pywaffle==0.6.3
