--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,10 @@ gunicorn[gevent]==20.0.4
 #gunicorn[gevent]~=19.9.0
 #uwsgi==2.0.19.1
 WeasyPrint==52.5
-django-markdownify==0.9.0
+django-markdownify==0.9.2
 django-crispy-forms==1.12.0
-matplotlib==3.4.3
+matplotlib
 pywaffle==0.6.3
 django-weasyprint==1.1.0
+cairo
+pango
